Bug 250220 - wrong description of report-bug button
Summary: wrong description of report-bug button
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: LikeBack (other bugs)
Version First Reported In: 2.4-GIT
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 2.4.0
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-04 23:44 UTC by Alexander Potashev
Modified: 2011-06-20 12:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.2
Sentry Crash Report:


Attachments
Likeback bug dialog (36.79 KB, image/png)
2010-09-05 00:30 UTC, Myriam Schweingruber
Details
screenshot (LikeBack info dialog at Amarok startup) (55.87 KB, image/png)
2010-09-05 07:56 UTC, Alexander Potashev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2010-09-04 23:44:47 UTC
Version:           2.3.2-GIT (using Devel) 
OS:                Linux

Here:
"If you experience an improper behavior in the application, just click on the 
bug icon in the top-right corner of the window, describe the behavior and 
click on 'Send'."
-------------------

The bug icon actually opens a dialog with "Launch Bug Report Wizard" button, and you can't input text in that dialog.

Reproducible: Didn't try
Comment 1 Myriam Schweingruber 2010-09-05 00:12:41 UTC
This is on purpose, we don't want bugs reported elsewhere than in bugzilla.
Comment 2 Alexander Potashev 2010-09-05 00:18:36 UTC
(In reply to comment #1)
> This is on purpose, we don't want bugs reported elsewhere than in bugzilla.

What does this point have in common with the bug? The (wrong) description still talks about non-existing button "Send".
Comment 3 Myriam Schweingruber 2010-09-05 00:30:29 UTC
Created attachment 51327 [details]
Likeback bug dialog

I don't see this description anywhere here, could you provide a screenshot? When I click on the bug icon, it shows me this dialog.
Comment 4 Alexander Potashev 2010-09-05 07:56:50 UTC
Created attachment 51334 [details]
screenshot (LikeBack info dialog at Amarok startup)
Comment 5 Teo Mrnjavac 2010-09-05 11:28:00 UTC
The reporter is right but we're in string freeze right now, this will have to wait until the next release.
Comment 6 Myriam Schweingruber 2011-01-10 22:27:50 UTC
Teo: please do not forget this once Amarok 2.4 is tagged and string freeze is lifted.
Comment 7 Teo Mrnjavac 2011-06-20 12:04:21 UTC
Git commit 0ce917dc5a70529f9657dc56ab12c446b2774fcf by Teo Mrnjavac.
Committed on 20/06/2011 at 12:00.
Pushed by mrnjavac into branch 'master'.

Fixed wrong text in the Likeback information dialog.

It used to say click on "Send" but there's no such button, because the
"report bug" action starts the b.k.o assistant.
BUG: 250220
FIXED-IN: 2.4.2

M  +2    -2    src/likeback/LikeBack.cpp     

http://commits.kde.org/amarok/0ce917dc5a70529f9657dc56ab12c446b2774fcf