Fixed wrong text in the Likeback information dialog.

It used to say click on "Send" but there's no such button, because the
"report bug" action starts the b.k.o assistant.
BUG: 250220
FIXED-IN: 2.4.2